# flex

./: .gitignore  AGENTS.md  manual_elo.py  pyproject.toml
champs/: draft.py  elo_table.py  match.py
champs/myresources/: __init__.py  champs.txt  champs_players_manifest.json  champs_with_roles.csv  champs_with_roles.txt  roles_by_champ.txt
champs/random_champs/: filters.py  random_champ.py  random_champ_weighted.py
codex/: LOG.md
experiments/: what.ipynb
random_champ_bot/: bot.py  pyproject.toml  test.py
random_champ_bot/champs/: random_champ_weighted.py  roles.py  secret.py
random_champ_bot/champs/myresources/: __init__.py  champs_by_role.txt
tests/: test_filters.py  test_manual_elo.py
