[tool.poetry]
name = "lol-flex"
version = "0.1.0"
description = ""
authors = ["Felix Richards <felixarichards@gmail.com>"]
readme = "README.md"
packages = [{include = "lol_flex"}]

[tool.poetry.dependencies]
python = "^3.8"
cassiopeia = "^5.1.3"
pytest = "^8.3.4"
python-dotenv = "^1.0.1"
pywinpty = "1.1.6"
notebook = "6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
